ellipsize longer tile names, fixing grid spacing

--- a/website/welree/static/css/style.css
+++ b/website/welree/static/css/style.css
@@ -392,5 +392,7 @@ div.collection-slider .slider-collection-new {
     height: 156px;
 }
 .tile-name {
-    word-wrap: break-word;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
